--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.12.1",
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-animatable": "^1.3.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-onboarding-swiper": "^1.1.0",
+    "react-native-paper": "^2.16.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
