--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,8 @@ target 'MandiriHackathon' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'MandiriHackathonTests' do
     inherit! :search_paths
     # Pods for testing
