--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.1",
     "axios": "^0.19.0",
     "jetifier": "^1.6.3",
     "native-base": "^2.12.1",
