--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-animatable": "^1.3.2",
+    "react-native-circular-progress": "^1.3.0",
+    "react-native-country-picker-modal": "^0.8.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-onboarding-swiper": "^1.1.0",
     "react-native-paper": "^2.16.0",
+    "react-native-svg": "^9.5.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
