--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native-circular-progress": "^1.3.0",
     "react-native-country-picker-modal": "^0.8.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-onboarding-swiper": "^1.1.0",
     "react-native-paper": "^2.16.0",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-svg": "^9.5.3",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
