--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-circular-progress": "^1.3.0",
     "react-native-country-picker-modal": "^0.8.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-htmlview": "^0.14.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-onboarding-swiper": "^1.1.0",
     "react-native-paper": "^2.16.0",
